[gd_scene load_steps=9 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://PlayerSprites.tscn" type="PackedScene" id=2]

[sub_resource type="Gradient" id=1]

offsets = PoolRealArray( 0.551948, 0.818182, 0.996753, 1 )
colors = PoolColorArray( 0.325439, 0.325439, 0.325439, 1, 0.493809, 0.493809, 0.493809, 0, 0.423265, 0.423265, 0.423265, 0, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )
width = 2048

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 10, 1, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 3.63
flatness = 1.0
gravity = Vector3( 0, 19, 0 )
initial_velocity = 0.0
initial_velocity_random = 1.0
angular_velocity = 9.29526e+18
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 23.23
linear_accel_random = 1.0
radial_accel = 0.0
radial_accel_random = 0.26
tangential_accel = 9.78
tangential_accel_random = 0.7
damping = 0.2
damping_random = 0.49
angle = 0.0
angle_random = 0.0
scale = 3.84
scale_random = 0.84
color_ramp = SubResource( 2 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Animation", "Color", "Damping", "Emission Shape", "Flags", "Gravity", "Hue Variation", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="Animation" id=4]

resource_name = "particleJump"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("jumpParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 11.0155
height = 6.73176

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 8.70709, 16.8859 )

[node name="player" type="RigidBody2D" groups=[
"players",
]]

position = Vector2( 115.098, 265.853 )
input_pickable = false
collision_layer = 1
collision_mask = 1049
mode = 2
mass = 0.01
friction = 1.0
bounce = 0.0
gravity_scale = 30.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Collision", "Linear", "Material", "Pickable", "Transform", "Visibility" ]
playerName = "SET_ME_PLAYER_NAME"
hunger = 0

[node name="particleSystems" type="Node2D" parent="."]

editor/display_folded = true
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="jumpParticles" type="Particles2D" parent="particleSystems"]

position = Vector2( 5.06424, 27.0907 )
rotation = 1.10235
emitting = false
amount = 30
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 5.0
explosiveness = 1.0
randomness = 0.91
fixed_fps = 0
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="particleAnimPlayer" type="AnimationPlayer" parent="particleSystems"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/particleJump = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
_sections_unfolded = [ "Playback Options" ]

[node name="playerShape" type="CollisionShape2D" parent="."]

position = Vector2( 2.8125, 7.82388 )
rotation = -0.125957
scale = Vector2( 2.43329, 1.29047 )
shape = SubResource( 5 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z" ]

[node name="groundSensor" type="Area2D" parent="."]

editor/display_folded = true
position = Vector2( -3.07397, 28.562 )
scale = Vector2( 0.72265, 0.72265 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 33
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sensorShape" type="CollisionShape2D" parent="groundSensor"]

position = Vector2( 0.224045, 2.7933 )
scale = Vector2( 1.62509, 0.52064 )
shape = SubResource( 6 )
one_way_collision = true
_sections_unfolded = [ "Transform" ]

[node name="Sprite" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -31.0
margin_top = -76.0
margin_right = 41.0
margin_bottom = -48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0.325439, 0.325439, 0.325439, 1 )
custom_colors/font_color_shadow = Color( 0.34375, 0.34375, 0.34375, 1 )
text = "HALLO ICH BIN DA"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Focus", "Hint", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_styles" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

stream = null
volume_db = 10.0
autoplay = false
mix_target = 0
bus = "Effects"

[connection signal="body_shape_entered" from="." to="." method="_on_player_body_shape_entered"]

[connection signal="body_shape_exited" from="." to="." method="_on_player_body_shape_exited"]

[connection signal="body_entered" from="groundSensor" to="." method="_on_groundSensor_body_entered"]

[connection signal="body_exited" from="groundSensor" to="." method="_on_groundSensor_body_exited"]

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]


